<resources>
    <string name="app_name">GTIV</string>
    <string name="call_overlay_window_tips">GTIV: You have a call invitation</string>
    <string name="RepealMessage">Recalled a message</string>
    <string name="GetCameraPermission">You need to obtain video permission to make video calls</string>
    <string name="need_record_audio_permission">Audio permission is required to record voice</string>
    <string name="Tips">Notice</string>
    <string name="Confirm">Confirm</string>
    <string name="OfflineTipsContent">Your account has been logged in elsewhere. Please confirm whether the account is secure.</string>
    <string name="send">Send</string>
    <string name="hold_speak">Hold and speak</string>
    <string name="action_photo">photo</string>
    <string name="action_video">video</string>
    <string name="action_video_call">converse</string>
    <string name="action_call">voip</string>
    <string name="msg_action_copy">copy</string>
    <string name="msg_action_delete">delete</string>
    <string name="msg_action_repeal">repeal</string>
    <string name="slide_up_cancel_send">slide up to cancel sending</string>
    <string name="bottom_menu_video">video</string>
    <string name="bottom_menu_live">live</string>
    <string name="bottom_menu_friend">friend</string>
    <string name="bottom_menu_message">message</string>
    <string name="bottom_menu_mine">mine</string>
    <string name="invite">invite</string>
    <string name="make_voice_call">to make a voice call</string>
    <string name="make_video_call">to make a video call</string>
    <string name="you">you</string>
    <string name="call_not_connected">Call requested, but not answered</string>
    <string name="hang_up_call">Hang up the call</string>
    <string name="full_screen_viewing">Full screen</string>
    <string name="supports">supports</string>
    <string name="follow">follow</string>
    <string name="follow_plus">+ follow</string>
    <string name="unfollow">unfollow</string>
    <string name="fans">fans</string>
    <string name="send_private_message">Send message</string>
    <string name="creation">creation</string>
    <string name="favorite">favorite</string>
    <string name="collect">collect</string>
    <string name="none_live">None live</string>
    <string name="streaming">Streaming</string>
    <string name="video_loading">stream loading...</string>
    <string name="add_friend">Add Friend</string>
    <string name="apply_contacts">Apply Contacts</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_now">Join now</string>
    <string name="account_error">Incorrect account</string>
    <string name="password_empty">Please enter password</string>
    <string name="cofirm_password_error">The two passwords dont match</string>
    <string name="account_manager">Manager</string>
    <string name="apply_anchor">Apply Anchor</string>
    <string name="my_release">My Release</string>
    <string name="my_collection">My Collection</string>
    <string name="avatar">Avatar</string>
    <string name="nickname">Nickname</string>
    <string name="language">Language</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="input_nick">Your nickname</string>
    <string name="simplified_chinese">Simplified Chinese</string>
    <string name="english">English</string>
    <string name="contacts">Contacts</string>
    <string name="group">Group</string>
    <string name="notice">Notice</string>
    <string name="new_friends">New friends</string>
    <string name="search_user">Search user</string>
    <string name="search">Search</string>
    <string name="login_fail">Login fail</string>
    <string name="apply_anchor_tips">Coming soon, stay tuned</string>
    <string name="userid">User ID :</string>
    <string name="video_count">Total ? videos</string>
    <string name="just">Just</string>
    <string name="day_ago">Day ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="minutes_ago">Minutes ago</string>
    <string name="picture_message">Picture message</string>
    <string name="voice_msg">Voice mssage</string>
    <string name="videoMsg">Video Message</string>
    <string name="repealMsg">Repeal a message</string>
    <string name="bannedToPost">Banned to post</string>
    <string name="relieveBannedUser">Relieve banned</string>
    <string name="friendVerificationPassed">Friend verification passed</string>
    <string name="videoIncomingCall">Video call</string>
    <string name="callNotConnected">Call requested but not answered</string>
    <string name="rejectCall">Reject call</string>
    <string name="setting">Setting</string>
    <string name="message_setting">Message setting</string>
    <string name="chatNotificationTitle">NotificationTitle</string>
    <string name="chatNotificationContent">You have ? unread messages</string>
    <string name="modifyRoomName">\"?\" Modified the group name to \"_\"</string>
    <string name="roomRemoveMember">\"?\" was removed from group</string>
    <string name="unfriended">You\'re not friends</string>
    <string name="otherPlaceLoginTile">Login reminder</string>
    <string name="otherPlaceLoginContent">Your account has already been logged in elsewhere, and you will be pushed offline on this device.</string>
    <string name="close">Close</string>
    <string name="totalFollowNum">Total ?</string>
    <string name="totalFansNum">Total ?</string>
    <string name="recentlySupports">Recently supports</string>
    <string name="lockScreenCall">Lock screen call</string>
    <string name="lockScreenCallRemind">When the phone is in a locked screen state, it is allowed to receive call invitation requests from friends, which requires you to grant floating window permission.</string>
    <string name="batteryOptimization">Ignore battery optimization</string>
    <string name="batteryOptimizationRemind">When the app is running in the background, it may be killed by your phone\'s battery optimization system, which can prevent you from receiving important messages in a timely manner. We suggest that you turn on battery optimization protection to keep the application online as much as possible.</string>
    <string name="messageSetting">Message Setting</string>
    <string name="totalRoom">Total ?</string>
    <string name="totalFriends">Total ?</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="inputUserId">Enter user ID to search</string>
    <string name="userNotFound">User does not exist</string>
    <string name="helloIam">Hello I am</string>
    <string name="added">Added</string>
    <string name="refused">Refused</string>
    <string name="sent">Sent</string>
    <string name="shareToFriend">Share with friends</string>
    <string name="noFriend">You don\'t have any contacts yet</string>
    <string name="noRoom">You haven\'t joined any group yet</string>
    <string name="createRoom">Create room</string>
    <string name="selectContacts">Select contacts</string>
    <string name="setNickname">Set nickname</string>
    <string name="networkRequestError">Network request failed</string>
    <string name="checkNetworkAndTapScreenToRetry">Please check the network And Tap to try again</string>
    <string name="noCreationVideo">Have you posted any videos yet</string>
    <string name="noCollectVideo">You haven\'t collected any videos yet</string>
    <string name="delete">Delete</string>
    <string name="sendVideoSizeLimit">Cannot send videos larger than 100M</string>
    <string name="operationFrequently">Your operation is too fast. Please try again later</string>
    <string name="friendManage">Friend management</string>
    <string name="clearChatRecords">Clear chat records</string>
    <string name="viewUserPage">View Home Page</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clearChatRecordsRemind">After clearing the chat history with this friend, it cannot be restored. Are you sure you want to clear it?</string>
    <string name="deleteFriend">Delete Friend</string>
    <string name="deleteFriendTips">This operation will terminate the friend relationship and delete all chat records with the user. Do you want to continue?</string>
    <string name="roomInfo">Group info</string>
    <string name="viewMoreRoomMember">View more</string>
    <string name="roomMemberManage">Member Management</string>
    <string name="roomName">Room Name</string>
    <string name="roomAvatar">Group Avatar</string>
    <string name="bannedAll">All prohibitions</string>
    <string name="exitGroup">Exit Group</string>
    <string name="roomMmeber">Group Member</string>
    <string name="exitGroupConfirm">Exit group chat</string>
    <string name="exitGroupConfirmTips">Exiting group chat will delete all chat records. Do you want to continue?</string>
    <string name="inviteRoomMemberNotify">\? invited _  join group</string>
    <string name="sombodyExitGroup">dropped out of group chat</string>
    <string name="setGroupName">Set group name</string>
    <string name="remvoeRoomMemberTips">Are you sure to remove this user from the group chat?</string>
    <string name="removeRoomMember">Remove Members</string>
    <string name="remove">Remove</string>
    <string name="youBeenRemoved">You have been removed</string>
</resources>
