<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.login.LoginFragment">

    <include
        android:id="@+id/header"
        layout="@layout/common_header" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/itemEN"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/radio_button"
            android:text="@string/english" />

        <include
            layout="@layout/cpt_divider"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent" />

        <RadioButton
            android:id="@+id/itemCN"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/radio_button"
            android:text="@string/simplified_chinese" />

        <include
            layout="@layout/cpt_divider"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent" />

    </RadioGroup>


    <Button
        android:id="@+id/submit"
        style="@style/btn_in_header_right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="start"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:text="@string/save"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>