<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_local">

    <include
        android:id="@+id/header"
        layout="@layout/common_header" />

    <LinearLayout
        android:id="@+id/topArea"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/bg_global"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <!-- 头像 -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/imageRadius10dp"
        app:strokeColor="#fff" />

    <TextView
        android:id="@+id/nick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/font_master"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:text="昵称昵称" />


    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/nick"
        app:layout_constraintTop_toBottomOf="@+id/nick"
        tools:text="t3" />

    <LinearLayout
        android:background="@color/bg_global"
        android:id="@+id/middleArea"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topArea"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userPage"
            android:text="@string/viewUserPage"
            android:textSize="16sp"
            android:height="60dp"
            android:clickable="true"
            android:textColor="@color/hyperlink_master"
            android:gravity="center|left"
            android:background="@drawable/border_bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clearHistory"
            android:text="@string/clearChatRecords"
            android:textSize="16sp"
            android:height="60dp"
            android:gravity="center|left"
            android:clickable="true"
            android:textColor="@color/hyperlink_master"
            android:background="@drawable/border_bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/goChatting"
            android:text="@string/send_private_message"
            android:textSize="16sp"
            android:height="60dp"
            android:gravity="center|left"
            android:clickable="true"
            android:textColor="@color/hyperlink_master"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/bg_global"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/action_warning"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middleArea" />


</androidx.constraintlayout.widget.ConstraintLayout>